--- a/platforms/hyperledger-fabric/charts/fabric-orderernode/values.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-orderernode/values.yaml
@@ -51,7 +51,11 @@ labels:
 
 # HLF Network Version
 network:
-  version: 2.2.2
+  version: 2.5.4
+
+channel:
+  # Provide the channel's name
+  channel_name: Allchannel
 
 image:
   #Provide the valid image name and version for fabric orderer
