--- a/platforms/hyperledger-fabric/charts/values/noproxy-and-novault/ordererOrganization/orderer.yaml
+++ b/platforms/hyperledger-fabric/charts/values/noproxy-and-novault/ordererOrganization/orderer.yaml
@@ -1,3 +1,4 @@
+#helm install orderer1 -f values/noproxy-and-novault/ordererOrganization/orderer.yaml -n supplychain-net fabric-orderernode
 global:
   serviceAccountName: vault-auth
   vault:
@@ -13,6 +14,9 @@ global:
 
 network:
   version: 2.5.4
+
+channel:
+  channel_name: Allchannel
 
 orderer:
   logLevel: info
