--- a/platforms/hyperledger-fabric/charts/values/noproxy-and-novault/peerOrganization/peer.yaml
+++ b/platforms/hyperledger-fabric/charts/values/noproxy-and-novault/peerOrganization/peer.yaml
@@ -1,4 +1,4 @@
-#helm install pee0 -f values/noproxy-and-novault/peerOrganization/peer.yaml -n carrier-net fabric-orderernode
+#helm install pee0-carrier -f values/noproxy-and-novault/peerOrganization/peer.yaml -n carrier-net fabric-peer
 global:
   serviceAccountName: vault-auth
   vault:
