--- a/platforms/hyperledger-fabric/charts/fabric-ca-server/values.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-ca-server/values.yaml
@@ -13,6 +13,9 @@ global:
   cluster:
     provider: aws  # choose from: minikube | aws | azure | gcp
     cloudNativeServices: false # only 'false' is implemented
+    #Provide the kubernetes host url
+    #Eg. kubernetesUrl: https://10.3.8.5:8443
+    kubernetesUrl: 
   vault:
     #Provide the type of vault
     #Eg. type: hashicorp
@@ -44,12 +47,12 @@ global:
 
 cacerts:
   ca:
-  #Provide organization's name
-  orgName: supplychain
-  #Provide the subject of the services ca organization's
-  #Eg. subject: "/C=GB/ST=London/L=London/O=Carrier/CN=carrier-net"
-  subject: /C=GB/ST=London/L=London/O=Orderer
-  # Flag to ensure the certificates secrets are removed on helm uninstall
+    #Provide organization's name
+    orgName: supplychain
+    #Provide the subject of the services ca organization's
+    #Eg. subject: "/C=GB/ST=London/L=London/O=Carrier/CN=carrier-net"
+    subject: /C=GB/ST=London/L=London/O=Orderer
+    # Flag to ensure the certificates secrets are removed on helm uninstall
 
 catools:
   orgData:
@@ -83,7 +86,7 @@ catools:
 
   #Provide peer's names
   peers:
-    - peer0
+    - peer0-carrier
   
   users: 
     # Generating User Certificates with custom attributes using Fabric CA in Bevel for Peer Organizations
@@ -147,6 +150,12 @@ service:
       #Provide tcp cluster IP port to be exposed for ca server
       #Eg. clusterIpPort: 7054
       clusterIpPort: 7054
+
+settings:
+  # Flag to ensure certificates configmaps are removed on helm uninstall
+  removeOrdererTlsOnDelete: true
+  # Flag to ensure the certificates secrets are removed on helm uninstall
+  removeCertsOnDelete: true
 
 labels:
   service: []
