--- a/platforms/hyperledger-fabric/charts/fabric-catools/templates/configmap.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-catools/templates/configmap.yaml
@@ -51,7 +51,7 @@ data:
     fabric-ca-client getcacert -d -u https://${CA} --tls.certfiles ${ROOT_TLS_CERT} -M ${ORG_CYPTO_FOLDER}/msp
     
     if [ "{{ .Values.global.proxy.provider }}" != "none" ]; then
-        mv ${ORG_CYPTO_FOLDER}/msp/cacerts/*.pem ${ORG_CYPTO_FOLDER}/msp/cacerts/ca-${FULLY_QUALIFIED_ORG_NAME}-${EXTERNAL_URL_SUFFIX}.pem
+        mv ${ORG_CYPTO_FOLDER}/msp/cacerts/*.pem ${ORG_CYPTO_FOLDER}/msp/cacerts/{{ .Release.Name }}-${FULLY_QUALIFIED_ORG_NAME}-${EXTERNAL_URL_SUFFIX}.pem
     fi
     mkdir ${ORG_CYPTO_FOLDER}/msp/tlscacerts
     cp ${ORG_CYPTO_FOLDER}/msp/cacerts/* ${ORG_CYPTO_FOLDER}/msp/tlscacerts
@@ -71,7 +71,7 @@ data:
     cp -R ${ORG_HOME}/admin/msp ${ORG_CYPTO_FOLDER}/users/${ORG_ADMIN_USER}
 
     if [ "{{ .Values.global.proxy.provider }}" != "none" ]; then
-        mv ${ORG_CYPTO_FOLDER}/users/${ORG_ADMIN_USER}/msp/cacerts/*.pem ${ORG_CYPTO_FOLDER}/users/${ORG_ADMIN_USER}/msp/cacerts/ca-${FULLY_QUALIFIED_ORG_NAME}-${EXTERNAL_URL_SUFFIX}.pem
+        mv ${ORG_CYPTO_FOLDER}/users/${ORG_ADMIN_USER}/msp/cacerts/*.pem ${ORG_CYPTO_FOLDER}/users/${ORG_ADMIN_USER}/msp/cacerts/{{ .Release.Name }}-${FULLY_QUALIFIED_ORG_NAME}-${EXTERNAL_URL_SUFFIX}.pem
     fi
 
     # Get TLS cert for admin and copy to appropriate location
@@ -143,7 +143,7 @@ data:
     mkdir ${ORG_CYPTO_FOLDER}/orderers/${PEER}/msp/tlscacerts
 
     if [ "{{ .Values.global.proxy.provider }}" != "none" ]; then
-      mv ${ORG_CYPTO_FOLDER}/orderers/${PEER}/msp/cacerts/*.pem ${ORG_CYPTO_FOLDER}/orderers/${PEER}/msp/cacerts/ca-${FULLY_QUALIFIED_ORG_NAME}-${EXTERNAL_URL_SUFFIX}.pem
+      mv ${ORG_CYPTO_FOLDER}/orderers/${PEER}/msp/cacerts/*.pem ${ORG_CYPTO_FOLDER}/orderers/${PEER}/msp/cacerts/{{ .Release.Name }}-${FULLY_QUALIFIED_ORG_NAME}-${EXTERNAL_URL_SUFFIX}.pem
     fi
     cp ${ORG_CYPTO_FOLDER}/orderers/${PEER}/msp/cacerts/* ${ORG_CYPTO_FOLDER}/orderers/${PEER}/msp/tlscacerts
 
@@ -170,7 +170,6 @@ data:
     CA="{{ .Release.Name }}.{{ .Release.Namespace }}:7054"
     CA_ADMIN_USER="${ORG_NAME}-admin"
     CA_ADMIN_PASS="${ORG_NAME}-adminpw"
-    NO_OF_PEERS="$PEERS_COUNT"
 
     ORG_ADMIN_USER="Admin@${FULLY_QUALIFIED_ORG_NAME}"
     ORG_ADMIN_PASS="Admin@${FULLY_QUALIFIED_ORG_NAME}-pw"
@@ -189,7 +188,7 @@ data:
     fabric-ca-client getcacert -d -u https://${CA} --tls.certfiles ${ROOT_TLS_CERT} -M ${ORG_CYPTO_FOLDER}/msp
 
     if [ "{{ .Values.global.proxy.provider }}" != "none" ]; then
-      mv ${ORG_CYPTO_FOLDER}/msp/cacerts/*.pem ${ORG_CYPTO_FOLDER}/msp/cacerts/ca-${FULLY_QUALIFIED_ORG_NAME}-${EXTERNAL_URL_SUFFIX}.pem
+      mv ${ORG_CYPTO_FOLDER}/msp/cacerts/*.pem ${ORG_CYPTO_FOLDER}/msp/cacerts/{{ .Release.Name }}-${FULLY_QUALIFIED_ORG_NAME}-${EXTERNAL_URL_SUFFIX}.pem
     fi
     mkdir ${ORG_CYPTO_FOLDER}/msp/tlscacerts
     cp ${ORG_CYPTO_FOLDER}/msp/cacerts/* ${ORG_CYPTO_FOLDER}/msp/tlscacerts
@@ -211,7 +210,7 @@ data:
     cp -R ${ORG_HOME}/admin/msp ${ORG_CYPTO_FOLDER}/users/${ORG_ADMIN_USER}
 
     if [ "{{ .Values.global.proxy.provider }}" != "none" ]; then
-      mv ${ORG_CYPTO_FOLDER}/users/${ORG_ADMIN_USER}/msp/cacerts/*.pem ${ORG_CYPTO_FOLDER}/users/${ORG_ADMIN_USER}/msp/cacerts/ca-${FULLY_QUALIFIED_ORG_NAME}-${EXTERNAL_URL_SUFFIX}.pem
+      mv ${ORG_CYPTO_FOLDER}/users/${ORG_ADMIN_USER}/msp/cacerts/*.pem ${ORG_CYPTO_FOLDER}/users/${ORG_ADMIN_USER}/msp/cacerts/{{ .Release.Name }}-${FULLY_QUALIFIED_ORG_NAME}-${EXTERNAL_URL_SUFFIX}.pem
     fi
 
     # Get TLS cert for admin and copy to appropriate location
@@ -224,9 +223,10 @@ data:
     cp ${ORG_HOME}/admin/tls/tlscacerts/* ${ORG_CYPTO_FOLDER}/users/${ORG_ADMIN_USER}/tls/ca.crt
 
     ## Register and enroll peers and populate their MSP folder
-    COUNTER=0
-    while [  ${COUNTER} -lt ${NO_OF_PEERS} ]; do
-      PEER="peer${COUNTER}.${FULLY_QUALIFIED_ORG_NAME}"
+    for PEER_DATA in $PEERS_NAMES
+    do
+      PEER_NAME="${PEER_DATA%%,*}"
+      PEER="${PEER_NAME}.${FULLY_QUALIFIED_ORG_NAME}"
       CSR_HOSTS=${PEER}
       for i in "${ALTERNATIVE_ORG_NAMES[@]}"
       do
@@ -257,12 +257,10 @@ data:
       # Copy the peer org's admin cert into target MSP directory
       mkdir -p ${ORG_CYPTO_FOLDER}/peers/${PEER}/msp/admincerts
       if [ "{{ .Values.global.proxy.provider }}" != "none" ]; then
-        mv ${ORG_CYPTO_FOLDER}/peers/${PEER}/msp/cacerts/*.pem ${ORG_CYPTO_FOLDER}/peers/${PEER}/msp/cacerts/ca-${FULLY_QUALIFIED_ORG_NAME}-${EXTERNAL_URL_SUFFIX}.pem
+        mv ${ORG_CYPTO_FOLDER}/peers/${PEER}/msp/cacerts/*.pem ${ORG_CYPTO_FOLDER}/peers/${PEER}/msp/cacerts/{{ .Release.Name }}-${FULLY_QUALIFIED_ORG_NAME}-${EXTERNAL_URL_SUFFIX}.pem
       fi
       cp ${ORG_CYPTO_FOLDER}/peers/${PEER}/msp/cacerts/* ${ORG_CYPTO_FOLDER}/peers/${PEER}/msp/tlscacerts
       cp ${ORG_CYPTO_FOLDER}/msp/admincerts/${ORG_ADMIN_USER}-cert.pem ${ORG_CYPTO_FOLDER}/peers/${PEER}/msp/admincerts
-      
-      let COUNTER=COUNTER+1
     done
 
     cd ${CURRENT_DIR}
@@ -304,7 +302,7 @@ data:
     fabric-ca-client getcacert -d -u https://${CA} --tls.certfiles ${ROOT_TLS_CERT} -M ${ORG_CYPTO_FOLDER}/msp
 
     if [ "{{ .Values.global.proxy.provider }}" != "none" ]; then
-      mv ${ORG_CYPTO_FOLDER}/msp/cacerts/*.pem ${ORG_CYPTO_FOLDER}/msp/cacerts/ca-${FULLY_QUALIFIED_ORG_NAME}-${EXTERNAL_URL_SUFFIX}.pem
+      mv ${ORG_CYPTO_FOLDER}/msp/cacerts/*.pem ${ORG_CYPTO_FOLDER}/msp/cacerts/{{ .Release.Name }}-${FULLY_QUALIFIED_ORG_NAME}-${EXTERNAL_URL_SUFFIX}.pem
     fi
     mkdir ${ORG_CYPTO_FOLDER}/msp/tlscacerts
     cp ${ORG_CYPTO_FOLDER}/msp/cacerts/* ${ORG_CYPTO_FOLDER}/msp/tlscacerts
@@ -323,7 +321,7 @@ data:
     cp -R ${ORG_HOME}/admin/msp ${ORG_CYPTO_FOLDER}/users/${ORG_ADMIN_USER}
 
     if [ "{{ .Values.global.proxy.provider }}" != "none" ]; then
-      mv ${ORG_CYPTO_FOLDER}/users/${ORG_ADMIN_USER}/msp/cacerts/*.pem ${ORG_CYPTO_FOLDER}/users/${ORG_ADMIN_USER}/msp/cacerts/ca-${FULLY_QUALIFIED_ORG_NAME}-${EXTERNAL_URL_SUFFIX}.pem
+      mv ${ORG_CYPTO_FOLDER}/users/${ORG_ADMIN_USER}/msp/cacerts/*.pem ${ORG_CYPTO_FOLDER}/users/${ORG_ADMIN_USER}/msp/cacerts/{{ .Release.Name }}-${FULLY_QUALIFIED_ORG_NAME}-${EXTERNAL_URL_SUFFIX}.pem
     fi
 
     # Get TLS cert for admin and copy to appropriate location
@@ -369,7 +367,7 @@ data:
       # Copy the peer org's admin cert into target MSP directory
       mkdir -p ${ORG_CYPTO_FOLDER}/peers/${PEER}/msp/admincerts
       if [ "{{ .Values.global.proxy.provider }}" != "none" ]; then
-        mv ${ORG_CYPTO_FOLDER}/peers/${PEER}/msp/cacerts/*.pem ${ORG_CYPTO_FOLDER}/peers/${PEER}/msp/cacerts/ca-${FULLY_QUALIFIED_ORG_NAME}-${EXTERNAL_URL_SUFFIX}.pem
+        mv ${ORG_CYPTO_FOLDER}/peers/${PEER}/msp/cacerts/*.pem ${ORG_CYPTO_FOLDER}/peers/${PEER}/msp/cacerts/{{ .Release.Name }}-${FULLY_QUALIFIED_ORG_NAME}-${EXTERNAL_URL_SUFFIX}.pem
       fi
       cp ${ORG_CYPTO_FOLDER}/peers/${PEER}/msp/cacerts/* ${ORG_CYPTO_FOLDER}/peers/${PEER}/msp/tlscacerts
       cp ${ORG_CYPTO_FOLDER}/msp/admincerts/${ORG_ADMIN_USER}-cert.pem ${ORG_CYPTO_FOLDER}/peers/${PEER}/msp/admincerts
@@ -444,7 +442,7 @@ data:
         cp -R ${ORG_HOME}/client${USER}/msp ${ORG_CYPTO_FOLDER}/users/${ORG_USER}
 
         if [ "{{ .Values.global.proxy.provider }}" != "none" ]; then
-          mv ${ORG_CYPTO_FOLDER}/users/${ORG_USER}/msp/cacerts/*.pem ${ORG_CYPTO_FOLDER}/users/${ORG_USER}/msp/cacerts/ca-${FULLY_QUALIFIED_ORG_NAME}-${EXTERNAL_URL_SUFFIX}.pem
+          mv ${ORG_CYPTO_FOLDER}/users/${ORG_USER}/msp/cacerts/*.pem ${ORG_CYPTO_FOLDER}/users/${ORG_USER}/msp/cacerts/{{ .Release.Name }}-${FULLY_QUALIFIED_ORG_NAME}-${EXTERNAL_URL_SUFFIX}.pem
         fi
         mkdir ${ORG_CYPTO_FOLDER}/users/${ORG_USER}/msp/tlscacerts
         cp ${ORG_CYPTO_FOLDER}/users/${ORG_USER}/msp/cacerts/* ${ORG_CYPTO_FOLDER}/users/${ORG_USER}/msp/tlscacerts
@@ -1213,10 +1211,8 @@ data:
 
     function savePeerSecrets {
       PEER_NAME=$1
-      TLS_KEY=$2
-      TLS_KEY_FORMATTED=$(echo $TLS_KEY | tr - /)
-      MPS_KEY=$3
-      MPS_KEY_FORMATTED=$(echo $MPS_KEY | tr - /)
+      TLS_KEY=$1/tls
+      MPS_KEY=$1/msp
 
       COUNTER=1
       if [ -e /certcheck/present_tls_${PEER_NAME}.txt ]; then PEER_TLS_CERT_WRITTEN=true; else PEER_TLS_CERT_WRITTEN=false; fi
@@ -1248,11 +1244,11 @@ data:
               }  
           }" > payload.json
 
-          vaultBevelFunc 'write' "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${TLS_KEY_FORMATTED}" 'payload.json'
+          vaultBevelFunc 'write' "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${TLS_KEY}" 'payload.json'
           rm payload.json
 
           # Check tls certificates
-          vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${TLS_KEY_FORMATTED}"
+          vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${TLS_KEY}"
           if [ "$SECRETS_AVAILABLE" == "yes" ]
           then
             TLS_CA_CERT=$(echo ${VAULT_SECRET} | jq -r ".[\"ca.crt\"]" 2>&1)
@@ -1328,11 +1324,11 @@ data:
 
           fi;
 
-          vaultBevelFunc 'write' "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${MPS_KEY_FORMATTED}" 'payload.json'
+          vaultBevelFunc 'write' "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${MPS_KEY}" 'payload.json'
           rm payload.json
 
           # Check msp certificates
-          vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${MPS_KEY_FORMATTED}"
+          vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${MPS_KEY}"
           if [ "$SECRETS_AVAILABLE" == "yes" ]
           then
             MSP_ADMINCERT=$(echo ${VAULT_SECRET} | jq -r ".[\"admincerts\"]" 2>&1)
@@ -1586,8 +1582,8 @@ data:
 
       function savePeerSecrets {
         PEER_NAME=$1
-        TLS_KEY=$2
-        MPS_KEY=$3
+        TLS_KEY=$1-tls
+        MPS_KEY=$1-msp
 
         if ([ -e /certcheck/absent_tls_${PEER_NAME}.txt ] && [ "$SAVE" == 'true' ]) || [ "$REFRESH_CERTS" == 'true' ]
         then
@@ -1665,10 +1661,26 @@ data:
 
 {{- end }}
 
+    function saveAdminMspConfigmap {
+      kubectl get configmap --namespace {{ .Release.Namespace }} admin-msp
+      if [ $? -ne 0 ]; then
+        if [ "$PROXY" != "none" ]; then
+          kubectl create configmap --namespace {{ .Release.Namespace }} admin-msp --from-file=admincerts=${ORG_CYPTO_FOLDER}/msp/admincerts/Admin@${COMPONENT_NAME}-cert.pem \
+            --from-file=cacerts=${ORG_CYPTO_FOLDER}/msp/cacerts/{{ .Release.Name }}-${COMPONENT_NAME}-${EXTERNAL_URL_SUFFIX}.pem  \
+            --from-file=tlscacerts=${ORG_CYPTO_FOLDER}/tls/ca.crt
+        else
+          kubectl create configmap --namespace {{ .Release.Namespace }} admin-msp --from-file=admincerts=${ORG_CYPTO_FOLDER}/msp/admincerts/Admin@${COMPONENT_NAME}-cert.pem \
+            --from-file=cacerts=${ORG_CYPTO_FOLDER}/msp/cacerts/{{ .Release.Name }}-${COMPONENT_NAME}-7054.pem  \
+            --from-file=tlscacerts=${ORG_CYPTO_FOLDER}/tls/ca.crt
+        fi
+      fi
+    }
+
     ORG_CYPTO_FOLDER="/crypto-config/peerOrganizations/${COMPONENT_NAME}/users/Admin@${COMPONENT_NAME}"
     ORG_CYPTO_PEER_FOLDER="/crypto-config/peerOrganizations/${COMPONENT_NAME}/peers"
 
     saveAdminSecrets admin-tls admin-msp
+    saveAdminMspConfigmap
 
     for PEER in $PEERS_NAMES
     do
@@ -1683,7 +1695,7 @@ data:
       if [ "$STATUS" = "new" ] || [ "$STATUS" = "" ]; then
         PEER_NAME="${PEER%%,*}"
         SAVE=true
-        savePeerSecrets $PEER_NAME $PEER-tls $PEER-msp
+        savePeerSecrets $PEER_NAME
       else 
         continue
       fi;
@@ -1993,31 +2005,31 @@ data:
     NodeOUs:
       Enable: true
       ClientOUIdentifier:
-        Certificate: cacerts/ca-{{ .Release.Namespace }}-{{ .Values.global.proxy.externalUrlSuffix }}.pem
+        Certificate: cacerts/{{ .Release.Name }}-{{ .Release.Namespace }}-{{ .Values.global.proxy.externalUrlSuffix }}.pem
         OrganizationalUnitIdentifier: client
       PeerOUIdentifier:
-        Certificate: cacerts/ca-{{ .Release.Namespace }}-{{ .Values.global.proxy.externalUrlSuffix }}.pem
+        Certificate: cacerts/{{ .Release.Name }}-{{ .Release.Namespace }}-{{ .Values.global.proxy.externalUrlSuffix }}.pem
         OrganizationalUnitIdentifier: peer
       AdminOUIdentifier:
-          Certificate: cacerts/ca-{{ .Release.Namespace }}-{{ .Values.global.proxy.externalUrlSuffix }}.pem
+          Certificate: cacerts/{{ .Release.Name }}-{{ .Release.Namespace }}-{{ .Values.global.proxy.externalUrlSuffix }}.pem
           OrganizationalUnitIdentifier: admin
       OrdererOUIdentifier:
-        Certificate: cacerts/ca-{{ .Release.Namespace }}-{{ .Values.global.proxy.externalUrlSuffix }}.pem
+        Certificate: cacerts/{{ .Release.Name }}-{{ .Release.Namespace }}-{{ .Values.global.proxy.externalUrlSuffix }}.pem
         OrganizationalUnitIdentifier: orderer
   none-config.yaml: |-
     NodeOUs:
       Enable: true
       ClientOUIdentifier:
-        Certificate: cacerts/ca-{{ .Release.Namespace }}-7054.pem
+        Certificate: cacerts/{{ .Release.Name }}-{{ .Release.Namespace }}-7054.pem
         OrganizationalUnitIdentifier: client
       PeerOUIdentifier:
-        Certificate: cacerts/ca-{{ .Release.Namespace }}-7054.pem
+        Certificate: cacerts/{{ .Release.Name }}-{{ .Release.Namespace }}-7054.pem
         OrganizationalUnitIdentifier: peer
       AdminOUIdentifier:
-        Certificate: cacerts/ca-{{ .Release.Namespace }}-7054.pem
+        Certificate: cacerts/{{ .Release.Name }}-{{ .Release.Namespace }}-7054.pem
         OrganizationalUnitIdentifier: admin
       OrdererOUIdentifier:
-        Certificate: cacerts/ca-{{ .Release.Namespace }}-7054.pem
+        Certificate: cacerts/{{ .Release.Name }}-{{ .Release.Namespace }}-7054.pem
         OrganizationalUnitIdentifier: orderer
 
 {{- $file := .Files.Get "files/orderer.crt" }}
