--- a/platforms/shared/configuration/roles/create/job_component/vars/main.yaml
+++ b/platforms/shared/configuration/roles/create/job_component/vars/main.yaml
@@ -10,7 +10,7 @@ job_templates:
   primary_init: primary_init.tpl
   secondary_init: secondary_init.tpl
 charts:
-  primary_genesis: besu-genesis
-  secondary_genesis: besu-genesis
+  primary_genesis: "{{ network.type }}-genesis"
+  secondary_genesis: "{{ network.type }}-genesis"
   primary_init: corda-init
   secondary_init: corda-init
