--- a/platforms/shared/configuration/roles/helm_lint/vars/main.yaml
+++ b/platforms/shared/configuration/roles/helm_lint/vars/main.yaml
@@ -26,8 +26,8 @@ charts:
   corda_node: corda-node
   quorum_tessera: quorum-tessera-node
   quorum: quorum-member-node
-  validatorquorum: quorum-validator-node
-  memberquorum: quorum-member-node
+  validatorquorum: quorum-node
+  memberquorum: quorum-node
   pki-generator: cenm-pki-gen
   signer: cenm-signer
   gateway: cenm-gateway
@@ -61,7 +61,7 @@ charts:
   node_substrate: substrate-node
   genesis_job: substrate-genesis
   dscp_ipfs_node: dscp-ipfs-node
-  certs-ambassador-quorum: quorum-tlscerts-gen
+  certs-ambassador-quorum: quorum-tlscert-gen
   crypto_raft_job: quorum-raft-crypto-gen
   fabric-connector: fabric-cacti-connector
   quorum-connector: quorum-cacti-connector
