--- a/platforms/quorum/configuration/deploy-network.yaml
+++ b/platforms/quorum/configuration/deploy-network.yaml
@@ -33,201 +33,75 @@
       gitops: "{{ item.gitops }}"
     loop: "{{ network['organizations'] }}"
   
-  # Create Storageclass
-  - name: Create Storage Class
+  # Create necessary secrets
+  - name: "Create k8s secrets"
     include_role:
-      name: "{{ playbook_dir }}/../../../platforms/shared/configuration/roles/setup/storageclass"
+      name: create/secrets
     vars:
-      org_name: "{{ org.name | lower }}"
-      sc_name: "{{ org_name }}-bevel-storageclass"
-      region: "{{ org.k8s.region | default('eu-west-1') }}"
-    loop: "{{ network['organizations'] }}"
-    loop_control:
-      loop_var: org
-
-  # Setup script for Vault and OS Package Manager
-  - name: "Setup script for Vault and OS Package Manager"
-    include_role:
-      name: "{{ playbook_dir }}/../../shared/configuration/roles/setup/scripts"
-    vars:
-      namespace: "{{ org.name | lower }}-quo"
-      kubernetes: "{{ org.k8s }}"
-    loop: "{{ network['organizations'] }}"
-    loop_control:
-      loop_var: org
-
-  # Setup Vault-Kubernetes accesses and Regcred for docker registry
-  - name: "Setup vault"
-    include_role:
-      name: "{{ playbook_dir }}/../../shared/configuration/roles/setup/vault_kubernetes"
-    vars:
-      name: "{{ org.name | lower }}"
-      component_ns: "{{ org.name | lower }}-quo"
-      component_name: "{{ org.name | lower }}-vaultk8s-job"
-      component_auth: "{{ network.env.type }}{{ name }}"
-      component_type: "organization"
-      kubernetes: "{{ org.k8s }}"
-      vault: "{{ org.vault }}"
-      gitops: "{{ org.gitops }}"
-    loop: "{{ network['organizations'] }}"
-    loop_control:
-      loop_var: org
-
-  # Generate Ambassador certificate for nodes
-  - name: "Create ambassador certificates for Nodes"
-    include_role:
-      name: create/certificates/ambassador
-    vars:
-      gitops: "{{ org.gitops }}"
-      component_auth: "{{ network.env.type }}{{ org.name | lower }}"
-      component_ns: "{{ org.name | lower }}-quo"
-      charts_dir: "{{ org.gitops.chart_source }}"
-      component_name: "{{ org.name | lower }}-ambassador-certs"
-      kubernetes: "{{ org.k8s }}"
-      values_dir: "{{ playbook_dir }}/../../../{{ org.gitops.release_dir }}"
-      vault: "{{ org.vault }}"
-      peers: "{{ org.services.peers }}"
-    loop: "{{ network['organizations'] }}"
-    loop_control:
-      loop_var: org
-
-  # Generate the crypto material for quorum network based on RAFT consensus and store it in vault
-  - name: "Generate crypto material for RAFT consensus"
-    include_role:
-      name: create/crypto/raft
-    vars:
-      gitops: "{{ org.gitops }}"
-      org_name: "{{ org.name }}"
-      component_name: "{{ org.name | lower }}"
-      component_ns: "{{ org.name | lower }}-quo"
-      values_dir: "{{ playbook_dir }}/../../../{{ org.gitops.release_dir }}"
-      vault: "{{ org.vault }}"
-      peers: "{{ org.services.peers }}"
-      charts_dir: "{{ org.gitops.chart_source }}"
-      kubernetes: "{{ org.k8s }}"
-    loop: "{{ network['organizations'] }}"
-    when: network.config.consensus == 'raft'
-    loop_control:
-      loop_var: org
-
-  # Build istanbul binary and place it in the bin directory
-  - name: "Setup istanbul-tools"
-    include_role:
-      name: setup/istanbul
-    loop: "{{ network['organizations'] }}"
-    when: network.config.consensus == 'ibft'
-
-  # Generate the genesis.json and nodekey/enode for all orgs of the network
-  - name: "Generate genesis and nodekey/enode for the network"
-    include_role:
-      name: create/genesis_nodekey
-    when: network.config.consensus == 'ibft'
-
-  # Generate the crypto material for quorum network based on ibft consensus and store it in vault
-  - name: "Generate crypto material for IBFT consensus"
-    include_role:
-      name: create/crypto/ibft
-    vars:
-      component_name: "{{ org.name | lower }}"
-      component_ns: "{{ org.name | lower }}-quo"
-      vault: "{{ org.vault }}"
-      org_name: "{{ org.name }}"
-      kubernetes: "{{ org.k8s }}"
-      peers: "{{ org.services.peers }}"
-      values_dir: "{{ playbook_dir }}/../../../{{ org.gitops.release_dir }}"
-      gitops: "{{ org.gitops }}"
-      charts_dir: "{{ org.gitops.chart_source }}"
-    loop: "{{ network['organizations'] }}"
-    loop_control:
-      loop_var: org
-    when: network.config.consensus == 'ibft'
-
-  # Generate the crypto materials for tessera tm
-  - name: "Generate crypto for the Tessera transaction manager"
-    include_role:
-      name: create/crypto/tessera
-    vars:
-      build_path: "{{ playbook_dir }}/build"
       component_ns: "{{ org.name | lower }}-quo"
       kubernetes: "{{ org.k8s }}"
       vault: "{{ org.vault }}"
-      org_name: "{{ org.name }}"
-      peers: "{{ org.services.peers }}"
-      gitops: "{{ org.gitops }}"
-      charts_dir: "{{ org.gitops.chart_source }}"
-      values_dir: "{{ playbook_dir }}/../../../{{ org.gitops.release_dir }}"
     loop: "{{ network['organizations'] }}"
     loop_control:
       loop_var: org
-    when:
-      - network.config.transaction_manager == 'tessera'
+    when: 
+    - org.org_status is not defined or org.org_status == 'new'
 
-  # Deploy Tessera transaction manager node
-  - name: "Deploy Tessera Transaction Manager"
+  # Execute primary genesis for the first organization
+  - name: "Setup primary genesis with first org as Validators"
     include_role:
-      name: create/tessera
-    vars:
-      consensus: "{{ network.config.consensus }}"
-      component_ns: "{{ org.name | lower }}-quo"
-      name: "{{ org.name | lower }}"
-      peers: "{{ org.services.peers }}"
-      sc_name: "{{ name }}-bevel-storageclass"
-      external_url: "{{ org.external_url_suffix }}"
-      vault: "{{ org.vault }}"
-      charts_dir: "{{ org.gitops.chart_source }}"
-      values_dir: "{{playbook_dir}}/../../../{{org.gitops.release_dir}}/{{ org.name | lower }}"
-    loop: "{{ network['organizations'] }}"
-    loop_control:
-      loop_var: org
-    when: network.config.transaction_manager == 'tessera'
-
-  # Deploy member nodes
-  - name: "Deploy member nodes"
-    include_role:
-      name: create/member_node
+      name: setup/genesis/primary
     vars:
       build_path: "./build"
-      kubernetes: "{{ org.k8s }}"
-      consensus: "{{ network.config.consensus }}"
-      component_ns: "{{ org.name | lower }}-quo"
+      org: "{{ network['organizations'] | first }}"
       name: "{{ org.name | lower }}"
-      peers: "{{ org.services.peers }}"
-      sc_name: "{{ name }}-bevel-storageclass"
-      external_url: "{{ org.external_url_suffix }}"
+      component_ns: "{{ org.name | lower }}-quo"
+      kubernetes: "{{ org.k8s }}"
       vault: "{{ org.vault }}"
-      git_url: "{{ org.gitops.git_url }}"
-      git_branch: "{{ org.gitops.branch }}"
-      docker_url: "{{ network.docker.url }}"
+      gitops: "{{ org.gitops }}"
       charts_dir: "{{ org.gitops.chart_source }}"
-      values_dir: "{{playbook_dir}}/../../../{{org.gitops.release_dir}}/{{ org.name | lower }}"
-      geth_data: "{{ network.config.bootnode | default('null') }}"
-    loop: "{{ network['organizations'] }}"
-    loop_control:
-      loop_var: org
+      values_dir: "./build/{{ component_ns }}"
+    when: 
+      - not (add_new_org | bool)
 
-  # Deploy validator nodes
+  # # This role deploy validator nodes
   - name: "Deploy validator nodes"
     include_role:
       name: create/validator_node
     vars:
       build_path: "./build"
+      org: "{{ network['organizations'] | first }}"
+      name: "{{ org.name | lower }}"
+      component_ns: "{{ org.name | lower }}-quo"
       kubernetes: "{{ org.k8s }}"
+      vault: "{{ org.vault }}"
+      gitops: "{{ org.gitops }}"
+      charts_dir: "{{ org.gitops.chart_source }}"
+      values_dir: "{{playbook_dir}}/../../../{{org.gitops.release_dir}}/{{ component_ns }}"
+    when: 
+    - org.org_status is not defined or org.org_status == 'new'
+
+  # Deploy member nodes
+  - name: "Deploy member nodes with tessera transaction manager"
+    include_role:
+      name: create/member_node
+    vars:
+      build_path: "./build"
+      kubernetes: "{{ org.k8s }}"
+      name: "{{ org.name | lower }}"
+      firstorg: "{{ network['organizations'] | first }}"
       consensus: "{{ network.config.consensus }}"
       component_ns: "{{ org.name | lower }}-quo"
-      name: "{{ org.name | lower }}"
-      peers: "{{ org.services.peers }}"
-      sc_name: "{{ name }}-bevel-storageclass"
-      external_url: "{{ org.external_url_suffix }}"
       vault: "{{ org.vault }}"
-      git_url: "{{ org.gitops.git_url }}"
-      git_branch: "{{ org.gitops.branch }}"
-      docker_url: "{{ network.docker.url }}"
+      gitops: "{{ org.gitops }}"
       charts_dir: "{{ org.gitops.chart_source }}"
-      values_dir: "{{playbook_dir}}/../../../{{org.gitops.release_dir}}/{{ org.name | lower }}"
+      values_dir: "{{playbook_dir}}/../../../{{org.gitops.release_dir}}/{{ component_ns }}"
       geth_data: "{{ network.config.bootnode | default('null') }}"
     loop: "{{ network['organizations'] }}"
     loop_control:
       loop_var: org
+    when: 
+      - org.org_status is not defined or org.org_status == 'new'
 
   #These variables can be overriden from the command line
   vars:
