--- a/platforms/quorum/configuration/roles/create/validator_node/tasks/main.yaml
+++ b/platforms/quorum/configuration/roles/create/validator_node/tasks/main.yaml
@@ -4,15 +4,41 @@
 #  SPDX-License-Identifier: Apache-2.0
 ##############################################################################################
 
-# Create helm release files for validator nodes
-- name: Create helm release files for validator nodes
-  include_tasks: validator_main.yaml
+# This task creates helm release file for each validator node of organization
+- name: Create helm release file for each validator node of organization
+  include_role:
+    name: create/helm_component
   vars:
-    peer_query: "peers[?type=='validator']"
-    validator_node: "{{ org.services | json_query(peer_query) | first | default() }}"
-  loop: "{{ peers }}"
+    component_name: "{{ peer.name }}"
+    type: "validatorquorum"
+  loop: "{{ org.services.validators }}"
   loop_control:
     loop_var: peer
-  when:
-    - validator_node | length > 0
-    - peer.type == 'validator'
+  when: org.services.validators is defined
+
+# Git Push : Pushes the above generated files to git 
+- name: Git Push
+  include_role: 
+    name: "{{ playbook_dir }}/../../shared/configuration/roles/git_push"
+  vars:
+    GIT_DIR: "{{ playbook_dir }}/../../../"
+    msg: "[ci skip] Pushing Validator files"
+  when: org.services.validators is defined
+
+# Wait for the last validator to be running
+- name: "Wait for the last validator to run"
+  include_role:
+    name: "{{ playbook_dir }}/../../shared/configuration/roles/check/helm_component"
+  vars:
+    validator: "{{ org.services.validators | last }}"
+    label_selectors:
+      - app.kubernetes.io/release = {{ validator.name | lower }}
+    component_type: "Pod"
+    namespace: "{{ component_ns }}"
+  when: org.services.validators is defined
+
+# Get the Genesis and staticnodes
+- name: Get genesis and staticnodes
+  include_role: 
+    name: get/genesis
+  when: org.services.validators is defined
