[indy] Use only helm to deploy Indy network
Signed-off-by: sownak <sownak.roy@accenture.com>

--- a/platforms/hyperledger-indy/charts/indy-node/Chart.yaml
+++ b/platforms/hyperledger-indy/charts/indy-node/Chart.yaml
@@ -3,9 +3,23 @@
 #
 #  SPDX-License-Identifier: Apache-2.0
 ##############################################################################################
-
 apiVersion: v1
-appVersion: "2.0"
-description: "hyperledger-indy: charts for indy-node StatefulSet"
 name: indy-node
+description: Hyperledger Indy nodes for a SSI network
 version: 1.0.1
+appVersion: latest
+keywords:
+  - bevel
+  - identity
+  - indy
+  - hyperledger
+  - enterprise
+  - blockchain
+  - deployment
+  - accenture
+home: https://hyperledger-bevel.readthedocs.io/en/latest/
+sources:
+  - https://github.com/hyperledger/bevel
+maintainers:
+  - name: Hyperledger Bevel maintainers
+    email: bevel@lists.hyperledger.org
