--- a/platforms/hyperledger-indy/configuration/roles/setup/vault_kubernetes/tasks/main.yaml
+++ b/platforms/hyperledger-indy/configuration/roles/setup/vault_kubernetes/tasks/main.yaml
@@ -61,7 +61,7 @@
     VAULT_ADDR: "{{ vault.url }}"
     VAULT_TOKEN: "{{ vault.root_token }}"
   when: not vault_auth_status  # Only when auth_path is NOT in the output of auth_list
-  ignore_errors: yes
+  ignore_errors: true
 
 ############################################################################################
 # This task get the certificate for the cluster mentioned in k8 secret
@@ -90,7 +90,7 @@
     VAULT_ADDR: "{{ vault.url }}"
     VAULT_TOKEN: "{{ vault.root_token }}"
   register: vault_policy_result
-  ignore_errors: yes
+  ignore_errors: true
 
 #####################################################################################################################
 # This task creates the access policy for organizations
