--- a/platforms/hyperledger-indy/charts/indy-genesis/Chart.yaml
+++ b/platforms/hyperledger-indy/charts/indy-genesis/Chart.yaml
@@ -5,8 +5,8 @@
 ##############################################################################################
 
 apiVersion: v1
-name: indy-key-mgmt
-description: "hyperledger Indy: Keys generator"
+name: indy-genesis
+description: "Hyperledger Indy: Genesis generator"
 version: 1.1.0
 appVersion: latest
 keywords:
