--- a/platforms/hyperledger-indy/charts/indy-register-identity/Chart.yaml
+++ b/platforms/hyperledger-indy/charts/indy-register-identity/Chart.yaml
@@ -5,8 +5,8 @@
 ##############################################################################################
 
 apiVersion: v1
-name: indy-key-mgmt
-description: "hyperledger Indy: Keys generator"
+name: indy-register-identity
+description: "Hyperledger Indy: Indy Ledger Script for registering new identities"
 version: 1.1.0
 appVersion: latest
 keywords:
