This pull request introduces enhanced functionality to deploy the Substrate platform using Helm charts. Several improvements have been made to streamline the process and increase readability:
Following charts supports vault and proxy

Substrate-genesis:

Substrate-node:

dscp-ipfs-node

A README.md has been added at the path ./platform/substrate/charts/ to provide guidance for deploying the Substrate platform via Helm.

These enhancements aim to streamline Substrate deployment via Helm, making the process more efficient and the codebase easier to manage.

fixes #2484

Signed-off-by: saikumarbommakanti <sai.kumar.bommakanti@accenture.com>

--- a/platforms/substrate/charts/dscp-ipfs-node/values.yaml
+++ b/platforms/substrate/charts/dscp-ipfs-node/values.yaml
@@ -39,7 +39,7 @@ config:
   healthCheckPollPeriod: 30000
   healthCheckTimeout: 2000
   # External DSCP-Node hostname to query, this overrides dscpNode.enabled
-  nodeHost: ""
+  nodeHost: member-1-substrate-node
   # External DSCP-Node port to query
   nodePort: 9944
   # Public key for the IPFS subsystem
