--- a/platforms/substrate/charts/substrate-node/values.yaml
+++ b/platforms/substrate/charts/substrate-node/values.yaml
@@ -112,9 +112,9 @@ node:
   # Eg. command: substrate
   command: ./dscp-node
   isBootnode:
-    enabled: false # false | true
-    bootnodeName:
-    bootnodeAddr:
+    enabled: true # false | true
+    bootnodeName: validator-1
+    bootnodeAddr: validator-1-substrate-node-0-rc-p2p.supplychain-subs #if using proxy set it to this validator-1.<yourDomain.com>
     bootnodePort: 30333
   # Provide the size of the volume
   # Eg. dataVolumeSize: 1Gi
@@ -179,7 +179,7 @@ node:
   ports:
     # Specifies the port to listen on for peer-to-peer (p2p) traffic
     # Eg. p2p: 30333
-    p2p: 30333
+    p2p: 30333 #30333 
     # Specifies the port to listen on for incoming WebSocket traffic
     # Eg. ws: 9944
     ws: 9944
@@ -248,3 +248,11 @@ tolerations: []
 affinity: {}
 
 extraContainers: []
+# Override necessary Subchart values
+storage:
+  size: "10Gi"
+  # NOTE: when you set this to Retain, the volume WILL persist after the chart is delete and you need to manually delete it
+  reclaimPolicy: "Delete" # choose from: Delete | Retain
+  volumeBindingMode: Immediate # choose from: Immediate | WaitForFirstConsumer
+  allowedTopologies:
+    enabled: false
