--- a/platforms/substrate/charts/values/proxy-and-vault/genesis.yaml
+++ b/platforms/substrate/charts/values/proxy-and-vault/genesis.yaml
@@ -6,11 +6,24 @@
 ---
 global:
   serviceAccountName: vault-auth
+  vault:
+    type: hashicorp
+    network: substrate
+    address: http://vault.demo.com:8200
+    authPath: supplychain
+    secretEngine: secretsv2
+    certPrefix: "subs"
+    secretPrefix: "data/supplychain"
+    role: vault-role
   cluster:
     provider: azure
     cloudNativeServices: false
-  vault:
-    type: kubernetes # kubernetes | hashicorp
+    kubernetesUrl: https://kubernetes.url
 
-proxy:
-  provider: none # none | ambassador
+node:
+  validator:
+      count: 4
+  member:
+    count: 1
+    balance: 1152921504606846976
+
