--- a/platforms/substrate/charts/values/proxy-and-vault/ipfs.yaml
+++ b/platforms/substrate/charts/values/proxy-and-vault/ipfs.yaml
@@ -6,11 +6,13 @@
 ---
 global:
   serviceAccountName: vault-auth
-  cluster:
-    provider: azure
-    cloudNativeServices: false
   vault:
-    type: kubernetes # kubernetes | hashicorp
-
+    type: hashicorp
+    network: substrate
+    address: http://vault.demo.com:8200
+    authPath: supplychain
+    secretEngine: secretsv2
+    secretPrefix: "data/supplychain" 
+    role: vault-role
 proxy:
-  provider: none # none | ambassador
+  provider: ambassador 
