--- a/platforms/substrate/charts/values/proxy-and-vault/node.yaml
+++ b/platforms/substrate/charts/values/proxy-and-vault/node.yaml
@@ -14,4 +14,14 @@ global:
     provider: azure
     cloudNativeServices: false
   vault:
-    type: kubernetes # hashicorp | kubernetes
+    type: hashicorp
+    network: substrate
+    address: http://vault.demo.com:8200
+    authPath: supplychain
+    secretEngine: secretsv2
+    secretPrefix: "data/supplychain"
+    role: vault-role
+    
+proxy:
+  provider: ambassador  # none | ambassador
+  external_url: test.yourdomain.com  #specify the endpoint for the ambassador url 
